Fixed Phase 1 Foundation and employee validation secure , but adding employee function is nor working